Atualização da parte onde será exposto os trechos de poesias/historias

--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,56 @@ main .main-titulo {
   margin: 2rem 0 2rem 0;
   justify-content: center;
 }
-.main-slide-container,
+
 main h2 {
   grid-column: 2;
   display: flex;
   overflow: hidden;
   justify-content: center;
 }
+.main-slide-container {
+  grid-column: 1/4;
+  position: relative;
+  overflow-x: auto;
+  margin: 0 3rem 0 3rem;
+}
 .main-ul-slides {
   display: flex;
+  gap: 1.5rem;
+  padding: 2rem;
+}
+.main-ul-slides::after {
+  content: '→';
+  position: absolute;
+  top: 1px;
+  right: 30px;
+  color: rgba(0, 0, 1, 1);
+  animation: flecha 0.3s ease-in 1s infinite alternate;
+}
+@keyframes flecha {
+  from {
+    right: 30px;
+  }
+  to {
+    right: 20px;
+  }
+}
+.main-ul-slides li {
+  padding: 2rem;
+  color: #fff;
+  background: #1d1d1d;
+  border-radius: 5px;
+}
+.main-ul-slides h2 {
+  margin-top: 1rem;
+  cursor: pointer;
+  background: white;
+  color: #000;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+.main-ul-slides h2:hover {
+  background: yellow;
 }
 .main-links-p-h {
   grid-column: 2;
