--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ main h2 {
   color: #1d1d1d;
 }
 .main-ideias h2 {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .main-ideias {
   grid-column: 1/-1;
@@ -90,24 +90,32 @@ main h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #1d1d1d;
+  color: #fff;
+  padding: 1rem;
+  margin-bottom: 3rem;
+  border-radius: 6px 0 0 6px;
 }
 .main-ideias div {
   justify-content: center;
   display: flex;
 }
+.main-ideias p {
+  margin-bottom: 15px;
+  line-height: 1.3;
+}
 .main-ideias a {
   display: flex;
   margin: 2rem 0 2rem 0;
   justify-content: center;
-  background: #1d1d1d;
+  background: #fff;
   height: 3rem;
   align-items: center;
   width: 6rem;
   border-radius: 6px;
   font-weight: bold;
-  color: #fff;
+  color: #1d1d1d;
 }
 .main-ideias a:hover {
   background: yellow;
-  color: #1d1d1d;
 }
