--- a/css/displaygrid.css
+++ b/css/displaygrid.css
@@ -2,3 +2,15 @@
   display: grid;
   grid-template-columns: 1fr 1fr 2fr;
 }
+
+@media (max-width: 800px) {
+  .body-container-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 600px) {
+  .body-container-grid {
+    grid-template-columns: 1fr;
+  }
+}
