--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,13 @@
 .header-container {
-  grid-column: 1/-1;
+  grid-column: -1/1;
   display: grid;
   grid-template-columns: 1fr 2fr;
+  gap: 1rem;
   background: #1d1d1d;
   height: 5rem;
   border-radius: 6px 0 0 6px;
   margin: 2rem 0 0 3rem;
+  box-shadow: 5px 10px 15px 0px #696969;
 }
 .header-container h1 {
   text-align: center;
@@ -18,6 +20,7 @@
 }
 .header-container .header-logo:hover {
   color: yellow;
+  transition: 1s;
 }
 .body-container-grid nav {
   display: flex;
@@ -26,20 +29,27 @@
   list-style: none;
   color: #fff;
 }
+.active {
+  background: yellow;
+}
+.body-container-grid nav .active a {
+  color: #000;
+}
 .body-container-grid nav li {
   padding: 1rem 0;
   margin-right: 20px;
   border-radius: 4px;
 }
-.body-container-grid nav li:hover {
+.body-container-grid nav li:hover,
+.body-container-grid nav li a:hover {
   background: yellow;
+  color: black;
+  transition: 1s;
 }
 .body-container-grid nav li a {
   color: #fff;
   padding: 1rem;
   font-size: 1.25rem;
   font-weight: bold;
-}
-.body-container-grid nav li a:hover {
-  color: black;
+  border-radius: 6px;
 }
