--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ main h2 {
   top: 1px;
   right: 30px;
   color: rgba(0, 0, 1, 1);
-  animation: flecha 0.3s ease-in 1s infinite alternate;
+  animation: flecha 0.3s ease-in 1.5s infinite alternate;
 }
 @keyframes flecha {
   from {
@@ -47,6 +47,7 @@ main h2 {
   color: #fff;
   background: #1d1d1d;
   border-radius: 5px;
+  box-shadow: 5px 10px 15px 0px #696969;
 }
 .main-ul-slides h2 {
   margin-top: 1rem;
@@ -58,6 +59,7 @@ main h2 {
 }
 .main-ul-slides h2:hover {
   background: yellow;
+  transition: 0.6s;
 }
 .main-links-p-h {
   grid-column: 2;
@@ -76,9 +78,11 @@ main h2 {
   border-radius: 6px;
   font-weight: bold;
   color: #fff;
+  box-shadow: 5px 10px 15px 0px #696969;
 }
 .main-links-p-h a:hover {
   background: yellow;
+  transition: 0.6s;
   color: #1d1d1d;
 }
 .main-ideias h2 {
@@ -95,6 +99,7 @@ main h2 {
   padding: 1rem;
   margin-bottom: 3rem;
   border-radius: 6px 0 0 6px;
+  box-shadow: 5px 10px 15px 0px #696969;
 }
 .main-ideias div {
   justify-content: center;
@@ -117,5 +122,6 @@ main h2 {
   color: #1d1d1d;
 }
 .main-ideias a:hover {
+  transition: 0.6s;
   background: yellow;
 }
